WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127496
[EFL][WK2] Debug buildfix
https://bugs.webkit.org/show_bug.cgi?id=127496
Summary
[EFL][WK2] Debug buildfix
Csaba Osztrogonác
Reported
2014-01-23 10:46:11 PST
On Ubuntu 12.04 with GCC 4.7.3 (Ubuntu/Linaro 4.7.3-2ubuntu1~12.04) I got the following build failure only in debug mode: $ Tools/Scripts/build-webkit --debug --efl --cmakeargs="-DSHARED_CORE=ON" Linking CXX shared library ../../lib/libewebkit2.so CMakeFiles/WebKit2.dir/WebProcess/WebPage/WebPage.cpp.o: In function `WebKit::WebPage::sessionID() const': /home/ossy/WebKit/Source/WebKit2/WebProcess/WebPage/WebPage.cpp:2130: undefined reference to `WebKit::SessionTracker::legacyPrivateSessionID' /home/ossy/WebKit/Source/WebKit2/WebProcess/WebPage/WebPage.cpp:2130: undefined reference to `WebKit::SessionTracker::defaultSessionID' collect2: error: ld returned 1 exit status make[2]: *** [lib/libewebkit2.so.0.1.0] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.16 KB, patch)
2014-01-23 10:50 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2014-01-23 10:50:03 PST
Created
attachment 222002
[details]
Patch
Gyuyoung Kim
Comment 2
2014-01-24 03:55:04 PST
***
Bug 127549
has been marked as a duplicate of this bug. ***
Csaba Osztrogonác
Comment 3
2014-01-24 03:59:12 PST
landed in
r162699
Gyuyoung Kim
Comment 4
2014-01-24 04:01:37 PST
(In reply to
comment #3
)
> landed in
r162699
This patch belong to WK2 owner area, this patch is to fix build error. So, I believe this doesn't violate WK2 owner policy.
Csaba Osztrogonác
Comment 5
2014-01-24 04:03:37 PST
Trivial buildfixes don't need owner review.
Gyuyoung Kim
Comment 6
2014-01-24 04:04:40 PST
(In reply to
comment #5
)
> Trivial buildfixes don't need owner review.
I see. :D Thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug