[EFL][WK2] Debug buildfix https://bugs.webkit.org/show_bug.cgi?id=127496

Reviewed by Gyuyoung Kim.

* Shared/SessionTracker.cpp:

Canonical link: https://commits.webkit.org/145569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162699 268f45cc-cd09-0410-ab3c-d52691b4dbfc